EDITING and DELETING of ANNOUNCEMENTS completed!

--- a/app/src/main/res/layout/fragment_edit_announcement.xml
+++ b/app/src/main/res/layout/fragment_edit_announcement.xml
@@ -16,17 +16,16 @@
             android:id="@+id/imageProfile"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:src="@drawable/ic_announcement"
+            android:src="@drawable/ic_edit_announcement"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/announcementTitle"/>
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/announcementTitle"
+            android:id="@+id/editTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title"
+            android:text="Edit Announcement"
             android:textAllCaps="true"
             android:textSize="30dp"
             android:textColor="#FFFFFF"
@@ -35,118 +34,73 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
-        <com.smarteist.autoimageslider.SliderView
-            android:id="@+id/imageSlider"
-            android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:layout_margin="20dp"
-            app:sliderAnimationDuration="600"
-            app:sliderIndicatorAnimationDuration="600"
-            app:sliderIndicatorGravity="center_horizontal|bottom"
-            app:sliderIndicatorMargin="15dp"
-            app:sliderIndicatorOrientation="horizontal"
-            app:sliderIndicatorPadding="3dp"
-            app:sliderIndicatorRadius="2dp"
-            app:sliderIndicatorSelectedColor="@color/design_default_color_primary"
-            app:sliderIndicatorUnselectedColor="@color/design_default_color_secondary"
-            app:layout_constraintTop_toBottomOf="@id/announcementTitle"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-
-        <TextView
-            android:id="@+id/CreatorTitle"
+        <EditText
+            android:id="@+id/enterTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Creator:"
-            android:textAllCaps="true"
-            android:textSize="22dp"
-            android:layout_marginHorizontal="40dp"
-            android:layout_marginVertical="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageSlider"
-            app:layout_constraintLeft_toLeftOf="parent"/>
-
-        <TextView
-            android:id="@+id/CreatorDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="20dp"
-            android:text="Error 404"
-            android:textSize="17dp"
-            app:layout_constraintTop_toTopOf="@id/CreatorTitle"
-            app:layout_constraintBottom_toBottomOf="@id/CreatorTitle"
-            app:layout_constraintLeft_toRightOf="@id/CreatorTitle"/>
-
-        <TextView
-            android:id="@+id/HasOrNeed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="HAS THIS"
-            android:textAllCaps="true"
-            android:textColor="@color/green"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:layout_marginHorizontal="40dp"
-            android:layout_marginVertical="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/CreatorDescription"
+            android:ems="14"
+            android:hint="Title"
+            android:inputType="text"
+            android:layout_marginVertical="10dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-
-        <TextView
-            android:id="@+id/DescriptionTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Description:"
-            android:textAllCaps="true"
-            android:textSize="22dp"
-            android:layout_marginHorizontal="40dp"
-            android:layout_marginVertical="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/HasOrNeed"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-
-        <TextView
-            android:id="@+id/annoncementDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="40dp"
-            android:layout_marginBottom="20dp"
-            android:text="Description prova prova prova prova prova prova prova prova"
-            android:textSize="17dp"
-            app:layout_constraintTop_toBottomOf="@id/DescriptionTitle"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-
-        <Button
-            android:id="@+id/createGroupButton"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="@drawable/circle_button"
-            android:drawableTop="@drawable/ic_delete_announcement"
-            android:padding="15dp"
-            android:backgroundTint="@color/design_default_color_secondary"
-            android:drawableTint="@color/design_default_color_secondary"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="100dp"
-            app:layout_constraintTop_toBottomOf="@id/annoncementDescription"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/searchGroupButton"
-            app:layout_constraintLeft_toLeftOf="parent"/>
-
-        <Button
-            android:id="@+id/searchGroupButton"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="@drawable/circle_button"
-            android:drawableTop="@drawable/ic_edit_announcement"
-            android:padding="15dp"
-            android:backgroundTint="@color/design_default_color_secondary"
-            android:drawableTint="@color/design_default_color_secondary"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="100dp"
-            app:layout_constraintTop_toBottomOf="@id/annoncementDescription"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/createGroupButton"/>
+            app:layout_constraintTop_toBottomOf="@id/editTitle"/>
+
+        <TextView
+            android:id="@+id/HadText"
+            android:text="I have this"
+            android:textSize="18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            app:layout_constraintTop_toTopOf="@id/HadOrNeededSwitch"
+            app:layout_constraintRight_toLeftOf="@id/HadOrNeededSwitch"/>
+
+        <Switch
+            android:id="@+id/HadOrNeededSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            app:layout_constraintTop_toBottomOf="@id/enterTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+
+        <TextView
+            android:id="@+id/NeedText"
+            android:text="I need this"
+            android:textSize="18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintTop_toTopOf="@id/HadOrNeededSwitch"
+            app:layout_constraintLeft_toRightOf="@id/HadOrNeededSwitch"/>
+
+        <EditText
+            android:id="@+id/enterDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="12"
+            android:hint="Description"
+            android:inputType="textMultiLine"
+            android:lines="6"
+            android:layout_marginVertical="10dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/HadOrNeededSwitch"/>
+
+        <Button
+            android:id="@+id/updateAnnouncementButton"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:drawableLeft="@drawable/ic_publish"
+            android:text="update announcement"
+            android:padding="15dp"
+            android:backgroundTint="@color/design_default_color_primary"
+            android:drawableTint="@color/design_default_color_secondary"
+            android:layout_marginVertical="10dp"
+            app:layout_constraintTop_toBottomOf="@id/enterDescription"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
