--- a/app/src/main/res/layout/fragment_manage_announcement.xml
+++ b/app/src/main/res/layout/fragment_manage_announcement.xml
@@ -9,6 +9,7 @@
     android:background="@drawable/background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -52,6 +53,16 @@
             app:layout_constraintTop_toBottomOf="@id/announcementTitle"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
+
+        <LinearLayout
+            android:id="@+id/missingImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/announcementTitle"
+            app:layout_constraintBottom_toBottomOf="@id/imageSlider"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:orientation="vertical" />
 
 
         <TextView
