--- a/app/src/main/res/layout/fragment_create_announcement.xml
+++ b/app/src/main/res/layout/fragment_create_announcement.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,140 +8,146 @@
     tools:context=".ui.dashboard.DashboardFragment"
     android:background="@drawable/background">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:elevation="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/trasparent_black"
+        android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:elevation="10dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@color/trasparent_black"
-            android:visibility="invisible"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            />
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageProfile"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/ic_announcement_create"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            <ImageView
+                android:id="@+id/imageProfile"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/ic_announcement_create"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            android:id="@+id/CreateAnnouncementTitle"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:text="Create announcement"
-            android:textAllCaps="true"
-            android:textSize="30dp"
-            android:textColor="#FFFFFF"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@+id/imageProfile"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            <TextView
+                android:id="@+id/CreateAnnouncementTitle"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:text="Create announcement"
+                android:textAllCaps="true"
+                android:textSize="30dp"
+                android:textColor="#FFFFFF"
+                android:textAlignment="center"
+                app:layout_constraintTop_toBottomOf="@+id/imageProfile"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"/>
 
-        <EditText
-            android:id="@+id/enterTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="14"
-            android:hint="Title"
-            android:inputType="text"
-            android:layout_marginVertical="10dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/CreateAnnouncementTitle"/>
+            <EditText
+                android:id="@+id/enterTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="14"
+                android:hint="Title"
+                android:inputType="text"
+                android:layout_marginVertical="10dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/CreateAnnouncementTitle"/>
 
-        <TextView
-            android:id="@+id/HadText"
-            android:text="I have this"
-            android:textSize="18dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            app:layout_constraintTop_toTopOf="@id/HadOrNeededSwitch"
-            app:layout_constraintRight_toLeftOf="@id/HadOrNeededSwitch"/>
+            <TextView
+                android:id="@+id/HadText"
+                android:text="I have this"
+                android:textSize="18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                app:layout_constraintTop_toTopOf="@id/HadOrNeededSwitch"
+                app:layout_constraintRight_toLeftOf="@id/HadOrNeededSwitch"/>
 
-        <Switch
-            android:id="@+id/HadOrNeededSwitch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="10dp"
-            app:layout_constraintTop_toBottomOf="@id/enterTitle"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            <Switch
+                android:id="@+id/HadOrNeededSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                app:layout_constraintTop_toBottomOf="@id/enterTitle"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"/>
 
-        <TextView
-            android:id="@+id/NeedText"
-            android:text="I need this"
-            android:textSize="18dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintTop_toTopOf="@id/HadOrNeededSwitch"
-            app:layout_constraintLeft_toRightOf="@id/HadOrNeededSwitch"/>
+            <TextView
+                android:id="@+id/NeedText"
+                android:text="I need this"
+                android:textSize="18dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                app:layout_constraintTop_toTopOf="@id/HadOrNeededSwitch"
+                app:layout_constraintLeft_toRightOf="@id/HadOrNeededSwitch"/>
 
-        <EditText
-            android:id="@+id/enterDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="12"
-            android:hint="Description"
-            android:inputType="textMultiLine"
-            android:lines="6"
-            android:layout_marginVertical="10dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/HadOrNeededSwitch"/>
+            <EditText
+                android:id="@+id/enterDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="12"
+                android:hint="Description"
+                android:inputType="textMultiLine"
+                android:lines="6"
+                android:layout_marginVertical="10dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/HadOrNeededSwitch"/>
 
-        <Button
-            android:id="@+id/addPhotoButton"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:background="@drawable/circle_button"
-            android:drawableTop="@drawable/ic_add_photo"
-            android:padding="15dp"
-            android:backgroundTint="@color/design_default_color_secondary"
-            android:drawableTint="@color/design_default_color_secondary"
-            android:layout_marginVertical="10dp"
-            android:layout_marginLeft="20dp"
-            app:layout_constraintTop_toBottomOf="@id/enterDescription"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            <Button
+                android:id="@+id/addPhotoButton"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:background="@drawable/circle_button"
+                android:drawableTop="@drawable/ic_add_photo"
+                android:padding="15dp"
+                android:backgroundTint="@color/design_default_color_secondary"
+                android:drawableTint="@color/design_default_color_secondary"
+                android:layout_marginVertical="10dp"
+                android:layout_marginLeft="20dp"
+                app:layout_constraintTop_toBottomOf="@id/enterDescription"
+                app:layout_constraintLeft_toLeftOf="parent"/>
 
-        <Button
-            android:id="@+id/createAnnouncementButton"
-            android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:drawableLeft="@drawable/ic_publish"
-            android:text="publish announcement"
-            android:padding="15dp"
-            android:backgroundTint="@color/design_default_color_primary"
-            android:drawableTint="@color/design_default_color_secondary"
-            android:layout_marginVertical="10dp"
-            android:layout_marginRight="20dp"
-            app:layout_constraintTop_toBottomOf="@id/enterDescription"
-            app:layout_constraintRight_toRightOf="parent"/>
+            <Button
+                android:id="@+id/createAnnouncementButton"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                android:drawableLeft="@drawable/ic_publish"
+                android:text="publish announcement"
+                android:padding="15dp"
+                android:backgroundTint="@color/design_default_color_primary"
+                android:drawableTint="@color/design_default_color_secondary"
+                android:layout_marginVertical="10dp"
+                android:layout_marginRight="20dp"
+                app:layout_constraintTop_toBottomOf="@id/enterDescription"
+                app:layout_constraintRight_toRightOf="parent"/>
 
-        <LinearLayout
-            android:id="@+id/photoList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="10dp"
-            android:layout_marginBottom="100dp"
-            app:layout_constraintTop_toBottomOf="@id/addPhotoButton"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent">
+            <LinearLayout
+                android:id="@+id/photoList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="10dp"
+                android:layout_marginBottom="100dp"
+                app:layout_constraintTop_toBottomOf="@id/addPhotoButton"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent">
 
-        </LinearLayout>
+            </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.core.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
