--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,186 +1,209 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment"
+    tools:context=".ui.dashboard.DashboardFragment"
     android:background="@drawable/background">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:elevation="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/trasparent_black"
+        android:visibility="invisible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
-        <ImageView
-            android:id="@+id/Icon"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:src="@drawable/ic_profile"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/profile"/>
+    <androidx.core.widget.NestedScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".ui.home.HomeFragment"
+        android:background="@drawable/background">
 
-        <TextView
-            android:id="@+id/profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Profile"
-            android:textAllCaps="true"
-            android:textSize="30dp"
-            android:textColor="#FFFFFF"
-            android:textAlignment="center"
-            app:layout_constraintTop_toBottomOf="@id/Icon"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/profileImage"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            app:cardCornerRadius="250dp"
-            app:layout_constraintTop_toBottomOf="@id/profile"
-            app:layout_constraintBottom_toTopOf="@+id/Name"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/profileImageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/ic_profile" />
+                android:id="@+id/Icon"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/ic_profile"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/profile"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_height="match_parent"
-                android:layout_width="match_parent">
+            <TextView
+                android:id="@+id/profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Profile"
+                android:textAllCaps="true"
+                android:textSize="30dp"
+                android:textColor="#FFFFFF"
+                android:textAlignment="center"
+                app:layout_constraintTop_toBottomOf="@id/Icon"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"/>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/profileImage"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                app:cardCornerRadius="250dp"
+                app:layout_constraintTop_toBottomOf="@id/profile"
+                app:layout_constraintBottom_toTopOf="@+id/Name"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent">
 
                 <ImageView
+                    android:id="@+id/profileImageView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="10dp"
-                    android:background="@color/trasparent_black"
-                    android:src="@drawable/ic_edit_announcement"
-                    android:scaleType="center"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    />
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_profile" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent">
 
-        </androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="10dp"
+                        android:background="@color/trasparent_black"
+                        android:src="@drawable/ic_edit_announcement"
+                        android:scaleType="center"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        />
 
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:id="@+id/Email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email:"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="30dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/SurnameFill"
-            app:layout_constraintBottom_toTopOf="@id/BirthDate"/>
-
-        <TextView
-            android:id="@+id/EmailFill"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Error 404"
-            android:textSize="18sp"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintLeft_toRightOf="@id/Email"
-            app:layout_constraintBottom_toBottomOf="@+id/Email"/>
-
-        <TextView
-            android:id="@+id/Name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name:"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="30dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profileImage"
-            app:layout_constraintBottom_toTopOf="@id/Surname"/>
-
-        <TextView
-            android:id="@+id/NameFill"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Error 404"
-            android:textSize="18sp"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintLeft_toRightOf="@id/Name"
-            app:layout_constraintBottom_toBottomOf="@+id/Name"/>
+            </androidx.cardview.widget.CardView>
 
 
-        <TextView
-            android:id="@+id/Surname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Surname:"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginLeft="30dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Name"
-            app:layout_constraintBottom_toTopOf="@id/Email"/>
+            <TextView
+                android:id="@+id/Email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Email:"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="30dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/SurnameFill"
+                app:layout_constraintBottom_toTopOf="@id/BirthDate"/>
 
-        <TextView
-            android:id="@+id/SurnameFill"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Error 404"
-            android:textSize="18sp"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintLeft_toRightOf="@id/Surname"
-            app:layout_constraintBottom_toBottomOf="@+id/Surname"/>
+            <TextView
+                android:id="@+id/EmailFill"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Error 404"
+                android:textSize="18sp"
+                android:layout_marginLeft="10dp"
+                app:layout_constraintLeft_toRightOf="@id/Email"
+                app:layout_constraintBottom_toBottomOf="@+id/Email"/>
 
+            <TextView
+                android:id="@+id/Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Name:"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="30dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/profileImage"
+                app:layout_constraintBottom_toTopOf="@id/Surname"/>
 
-        <TextView
-            android:id="@+id/BirthDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="BirthDate:"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="30dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Email"/>
-
-        <TextView
-            android:id="@+id/BirthDateFill"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Error 404"
-            android:textSize="18sp"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintLeft_toRightOf="@id/BirthDate"
-            app:layout_constraintBottom_toBottomOf="@+id/BirthDate"/>
-
-        <Button
-            android:id="@+id/yourAnnouncementsButton"
-            android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:drawableLeft="@drawable/ic_annoncement_list"
-            android:text="your announcements"
-            android:padding="15dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="100dp"
-            android:backgroundTint="@color/design_default_color_primary"
-            android:drawableTint="@color/design_default_color_secondary"
-            app:layout_constraintTop_toBottomOf="@id/BirthDate"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            <TextView
+                android:id="@+id/NameFill"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Error 404"
+                android:textSize="18sp"
+                android:layout_marginLeft="10dp"
+                app:layout_constraintLeft_toRightOf="@id/Name"
+                app:layout_constraintBottom_toBottomOf="@+id/Name"/>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
+            <TextView
+                android:id="@+id/Surname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Surname:"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginLeft="30dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/Name"
+                app:layout_constraintBottom_toTopOf="@id/Email"/>
+
+            <TextView
+                android:id="@+id/SurnameFill"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Error 404"
+                android:textSize="18sp"
+                android:layout_marginLeft="10dp"
+                app:layout_constraintLeft_toRightOf="@id/Surname"
+                app:layout_constraintBottom_toBottomOf="@+id/Surname"/>
+
+
+            <TextView
+                android:id="@+id/BirthDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BirthDate:"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="30dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/Email"/>
+
+            <TextView
+                android:id="@+id/BirthDateFill"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Error 404"
+                android:textSize="18sp"
+                android:layout_marginLeft="10dp"
+                app:layout_constraintLeft_toRightOf="@id/BirthDate"
+                app:layout_constraintBottom_toBottomOf="@+id/BirthDate"/>
+
+            <Button
+                android:id="@+id/yourAnnouncementsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                android:drawableLeft="@drawable/ic_annoncement_list"
+                android:text="your announcements"
+                android:padding="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="100dp"
+                android:backgroundTint="@color/design_default_color_primary"
+                android:drawableTint="@color/design_default_color_secondary"
+                app:layout_constraintTop_toBottomOf="@id/BirthDate"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"/>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
