--- a/app/src/main/res/layout/fragment_create_announcement.xml
+++ b/app/src/main/res/layout/fragment_create_announcement.xml
@@ -138,11 +138,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginBottom="100dp"
                 app:layout_constraintTop_toBottomOf="@id/addPhotoButton"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent">
+
 
             </LinearLayout>
 
